# weighted-evidence

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data_pipeline/: __init__.py  registry.py
examples/: grade_one_paper.py  mcp_quickstart.md  rank_three_trials.py
mcp_server/: __init__.py  server.py
src/weighted_evidence/: __init__.py  cache.py  cli.py  config.py  models.py
src/weighted_evidence/agents/: __init__.py  evidence_agent.py
src/weighted_evidence/llm/: __init__.py  anthropic.py  base.py  parsers.py  rubric_calls.py
src/weighted_evidence/parsing/: __init__.py  abstract.py  effects.py  fragility.py  outcomes.py  pubtype.py  spin.py
src/weighted_evidence/retrieval/: __init__.py  client.py  europepmc.py  predatory.py  pubmed.py  resolver.py  retraction.py  semantic_scholar.py
src/weighted_evidence/rubric/: __init__.py  aggregate.py  amstar2.py  clinical_significance.py  directness.py  gis.py  grade.py  rob2.py  robins_i.py
src/weighted_evidence/rubric/prompts/: __init__.py  grade_modifiers.j2  rob2_domains.j2
tests/: conftest.py  test_aggregate.py  test_amstar2.py  test_clinical_significance.py  test_compare_rank.py  test_directness.py  test_effects.py  test_europepmc.py  test_fragility.py  test_gis.py  test_gis_signals.py  test_llm_rubric.py  test_outcomes.py  test_predatory.py  test_pubmed_parse.py  test_pubtype.py  test_resolver.py  test_retraction.py  test_robins_i.py  test_spin.py
tests/fixtures/: ardsnet_arma_pubmed.xml  europepmc_sample.xml  retraction_watch_sample.csv
training/: README.md
